fix payment
