# storage/api-docs/api-docs.json
@@ -3292,7 +3292,7 @@
                 "tags": [
                     "Wallet Transaction"
                 ],
-                "summary": "Create transaction",
+                "summary": "Recharge transaciton",
                 "operationId": "18820ae7e186fdb985947bdeaea2a7ce",
                 "requestBody": {
                     "description": "WalletTransaction object that needs to be created",
@@ -3318,7 +3318,48 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Create transaction Successful"
+                        "description": "Recharge Successful"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/transaction/withdrawal": {
+            "post": {
+                "tags": [
+                    "Wallet Transaction"
+                ],
+                "summary": "Withdrawal transaction",
+                "operationId": "fae938da9d58564dc6a7ac16f121e232",
+                "requestBody": {
+                    "description": "Wallet Transaction object that needs to be created",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "amount": {
+                                        "type": "number",
+                                        "format": "double",
+                                        "example": "1000"
+                                    },
+                                    "currency": {
+                                        "type": "string",
+                                        "example": "usd"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Withdrawal Successful"
                     }
                 },
                 "security": [
